css dashboard bugfix on small representation, todo: centering, todo: swim lanes combined heigt

--- a/src/style/dashboard.module.css
+++ b/src/style/dashboard.module.css
@@ -83,6 +83,7 @@
     composes: dashboardGridCellBox;
     display: flex;
     flex-flow: column;
+    justify-content: center;
 }
 
 .dashboardGridCellChartBoxActivityHistogram{
@@ -127,7 +128,6 @@
     display: flex;
     justify-content: center;
     flex-flow: column;
-    /* overflow: hidden; */
 }
 
 @media not all and (min-width: 1200px) {
@@ -143,7 +143,7 @@
 
     .dashboardGridCellChartBoxDoublerowVisualizations{
         composes: dashboardGridCellChartBoxDoublerowVisualizations;
-        height: var(--mainVisualizationsHeight);
+        max-height: var(--mainVisualizationsHeight);
     }
 }
 
